RESOLVED FIXED16376
<video> is frozen after coming back from a page that uses QuickTime plugin
https://bugs.webkit.org/show_bug.cgi?id=16376
Summary <video> is frozen after coming back from a page that uses QuickTime plugin
mitz
Reported 2007-12-09 23:28:37 PST
Steps to reproduce (not always reproducible): 1) Go to <http://webkit.org/blog/140/html5-media-support/>. 2) Click the play button. 3) Go to <http://www.apple.com/ipodtouch/ads/> (in the same Tab). 4) Go back. 5) Go forward. 6) Go back. Results: After going back in step 6, the video element shows a frozen video frame. Audio plays back normally and the play/pause button works.
Attachments
mitz
Comment 1 2007-12-29 18:30:26 PST
Antti Koivisto
Comment 2 2008-01-09 17:42:19 PST
Sending WebCore/ChangeLog Sending WebCore/rendering/RenderVideo.cpp Transmitting file data .. Committed revision 29345.
Note You need to log in before you can comment on or make changes to this bug.