        Reviewed by Mitz.

Fix http://bugs.webkit.org/show_bug.cgi?id=16376
        <rdar://problem/5665206>
        <video> element fails to play frames when navigating back to page (16376)

        Don't make MediaPlayer visible when it is actually in page cache.

        * rendering/RenderVideo.cpp:
        (WebCore::RenderVideo::updatePlayer):



Canonical link: https://commits.webkit.org/23178@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29345 268f45cc-cd09-0410-ab3c-d52691b4dbfc